added PUT for update, client can control successCode (query param, 200, 204, 303)
